# tdslite

./: .clang-format  .clang-tidy  .devcontainer  .doxyfile  .gdbinit  .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  hadouken  library.json  library.properties  project-metadata.env  workspace.code-workspace
.cmake/: project-configuration.cmake  project-dependencies.cmake  project-functions.cmake
.conan/: conanfile.py
.conan/profiles/: Clang  GNU  common
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/devenv/: Dockerfile  bootstrap.sh  devenv-image-build.sh  devenv-image-publish.sh
.github/workflows/: pipeline.yml
.misc/: test-all-builds.sh  test-avr-boards.sh
.misc/arduino/: prep-lib.sh
.misc/arduino/contents/: library.properties  tdslite.h
.misc/sample-pcaps/: tds-rpc-15255-paf-2.cap
data/sample-pcaps/: mssql-jtds-01.pcap  mssql-mdac-01.pcap
docs/: notes.md  pio-ard-esp-ci-report.md
examples/absolutemin/: absolutemin.ino
examples/arduino/: ApplicationMonitor.cpp  ApplicationMonitor.h  arduino.ino  test.ino
examples/arduino/01-initialize-library/: 01-initialize-library.ino
examples/arduino/02-create-insert-select-delete/: 02-create-insert-select-delete.ino
examples/arduino/03-select-rows/: 03-select-rows.ino
examples/arduino/04-info-callback/: 04-info-callback.ino
examples/arduino/05-query-with-parameters/: 05-query-with-parameters.ino
examples/arduino/06-custom-malloc/: 06-custom-malloc.ino
examples/boards/uno_wifi_r2/: uno_wifi_r2.ino
examples/esp/: esp.ino
examples/minimal-sql-shell/: CMakeLists.txt  minimal.cpp
extras/: bump-version.sh  prep-lib.sh  test-avr-boards.sh
extras/docs/: ms-tds-excerpt.md  notes.md  release-process.md
src/: CMakeLists.txt  tdslite.h
src/tdslite/: tdslite.hpp
src/tdslite-net/arduino/: tdsl_netimpl_arduino.hpp
src/tdslite-net/asio/: CMakeLists.txt
src/tdslite-net/asio/src/: tdsl_netimpl_asio.cxx
src/tdslite-net/base/: network_io_base.hpp  network_io_contract.hpp
src/tdslite/detail/: tdsl_allocator.hpp  tdsl_callback.hpp  tdsl_command_context.hpp  tdsl_data_type.inc  tdsl_default_allocator.hpp  tdsl_driver.hpp  tdsl_envchange_type.hpp  tdsl_field.hpp  tdsl_lang_code_id.hpp  tdsl_login_context.hpp  tdsl_message_token_type.hpp  tdsl_mssql_error_codes.hpp  tdsl_net_tx_mixin.hpp  tdsl_row.hpp  tdsl_sql_parameter.hpp  tdsl_string_writer.hpp  tdsl_tds_column_info.hpp  tdsl_tds_context.hpp  tdsl_tds_procedure_id.hpp  tdsl_token_handler_result.hpp
src/tdslite/detail/sqltypes/: sql_basics.hpp  sql_datetime.hpp  sql_decimal.hpp  sql_money.hpp  sql_smalldatetime.hpp  sql_type_base.hpp
src/tdslite/detail/token/: tds_colmetadata_token.hpp  tds_done_token.hpp  tds_loginack_token.hpp
src/tdslite/util/: tdsl_binary_reader.hpp  tdsl_binary_rw_base.hpp  tdsl_binary_writer.hpp  tdsl_buffer_object.hpp  tdsl_byte_swap.hpp  tdsl_debug_print.hpp  tdsl_expected.hpp  tdsl_hex_dump.hpp  tdsl_inttypes.hpp  tdsl_macrodef.hpp  tdsl_string_view.hpp  tdsl_type_traits.hpp  tdsl_utos.hpp
tdslite/: CMakeLists.txt
tdslite-net/tdslite-net-arduino/: CMakeLists.txt
tdslite-net/tdslite-net-asio/: CMakeLists.txt
tdslite-net/tdslite-net-asio/src/: asio_network_impl.cpp  tdsl_netimpl_asio.cpp
tdslite-net/tdslite-net-base/: CMakeLists.txt
tdslite/include/tdslite/: tdslite.hpp
tdslite/include/tdslite/detail/: tds_binary_reader.hpp  tds_byte_swap.hpp  tds_data_type.hpp  tds_endian.hpp  tds_inttypes.hpp  tds_macrodef.hpp  tds_span.hpp  tds_type_traits.hpp  tdsl_allocator.hpp  tdsl_callback.hpp  tdsl_driver.hpp  (+33 more)
tests/: CMakeLists.txt  it_tds_command.cpp  it_tds_login.cpp  ut_binary_reader.cpp  ut_byte_swap.cpp  ut_span.cpp  ut_tds_login.cpp  ut_tdslite.cpp
tests/cxxcompat/: CMakeLists.txt
tests/include/: semaphore.hpp
tests/integration/: CMakeLists.txt  it_tdsl_command_context.cpp  it_tdsl_driver.cpp  it_tdsl_login_context.cpp
tests/mock/mock_net_impl/: CMakeLists.txt
tests/sketches/absolutemin/: absolutemin.cpp
tests/sketches/arduino/: arduino.cpp  arduino.ino
tests/sketches/esp/: esp.cpp  esp.ino
tests/sketches/progmem/: progmem.cpp
tests/unit/: CMakeLists.txt  ut_arduino_driver.cpp  ut_binary_reader.cpp  ut_binary_writer.cpp  ut_buffer_object.cpp  ut_byte_swap.cpp  ut_progmem_string_view.cpp  ut_span.cpp  ut_sql_parameter.cpp  ut_string_view.cpp  ut_tdsl_allocator.cpp  ut_tdsl_command_context.cpp  ut_tdsl_data_type.cpp  ut_tdsl_field.cpp  ut_tdsl_login_context.cpp  ut_tdslite.cpp
(+50 files in other folders)
